BUG-2077 overflow-wrap: break-word for attachment filenames

--- a/resources/less/hakija.less
+++ b/resources/less/hakija.less
@@ -793,6 +793,7 @@ textarea.application__form-text-area__size-large {
 
 .application__form-attachment-filename {
   font-size: 14px;
+  overflow-wrap: break-word;
 }
 
 .application__form-attachment-error {
