--- a/resources/less/virkailija-application.less
+++ b/resources/less/virkailija-application.less
@@ -1658,28 +1658,13 @@ and (max-width: 1000px) {
   font-size: 14px;
   font-weight: 300;
   line-height: 150%;
+  overflow-wrap: break-word;
 }
 
 .application__virkailija-readonly-attachment-area {
   margin-top: 5px;
-  display: flex;
+  display: block;
   align-items: center;
-}
-
-.application__virkailija-readonly-attachment-delete {
-  .arrow(left, @pale-blue, 8px, 8px);
-  align-items: center;
-  background: @pale-blue;
-  border-radius: 3px;
-  color: white;
-  display: flex;
-  font-size: 13px;
-  margin-left: 20px;
-  padding: 4px 7px 4px 4px;
-}
-.application__virkailija-readonly-attachment-delete--confirm {
-  .arrow(left, @sg-color-red, 8px, 8px);
-  background-color: @sg-color-red;
 }
 
 .application__virkailija-readonly-attachment-virus-status-not-started {
